Add local development steps to README